# nn-image-approximation

./: README.md  main.py  pyproject.toml  server.py
static/: app.js  index.html  style.css
